<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dNote</string>

    <string name="categories">Categories</string>
    <string name="tools">Tools</string>

    <string name="default_category_name">My Notes</string>

    <string name="open_category_list">Open category list</string>
    <string name="close_category_list">Close category list</string>

    <string name="category_manager">Category Manager</string>
    <string name="cm_add_hint">New category…</string>
    <string name="cm_create">Create</string>
    <string name="cm_create_fail">Failed to create category!</string>
    <string name="cm_create_fail_reserved">Failed to create category!\nCategory name is reserved by dNote.</string>
    <string name="cm_create_fail_too_long">Failed to create category!\nCategory name should be under 20 letters.</string>
    <string name="cm_create_fail_empty">Failed to create category!\nCategory name shouldn\'t be empty.</string>
    <string name="cm_create_fail_already_exists">Failed to create category!\nCategory name already exists.</string>
    <string name="cm_empty">No category is created.\nCreate a new category to save notes!</string>
    <string name="cm_popup_menu_delete">Delete category</string>
    <string name="cm_popup_menu_delete_prompt">Are you sure you want to delete this category?\nAll notes in this category will removed and it can\'t be undone!</string>
    <string name="cm_popup_menu_delete_prompt_yes">Yes</string>
    <string name="cm_popup_menu_delete_prompt_no">No</string>
    <string name="cm_popup_menu_delete_failed">Failed to delete category!</string>
    <string name="cm_popup_menu_delete_failed_last_one">Failed to delete category!\nThere must be at least 1 category.</string>
    <string name="cm_popup_menu_rename">Rename</string>
    <string name="cm_popup_menu_rename_ok">OK</string>
    <string name="cm_popup_menu_rename_cancel">Cancel</string>
    <string name="cm_popup_menu_rename_fail">Failed to rename category!</string>
    <string name="cm_popup_menu_rename_fail_already_exists">Failed to rename category!\nCategory name already exists.</string>
    <string name="cm_popup_menu_rename_fail_same_name">Failed to rename category!\nNew category name is same with original category name.</string>
    <string name="cm_popup_menu_rename_fail_empty">Failed to rename category!\nCategory name shouldn\'t be empty.</string>
    <string name="cm_popup_menu_rename_fail_reserved">Failed to rename category!\nCategory name is reserved by dNote.</string>
    <string name="cm_popup_menu_rename_fail_too_long">Failed to rename category!\nCategory name should be under 20 letters.</string>

    <string name="mv_view_note">Note</string>
    <string name="mv_add_hint">New note…</string>
    <string name="mv_add">Add</string>
    <string name="mv_save_fail">Failed to save note!</string>
    <string name="mv_save_fail_empty">Failed to save note!\nYou can\'t save an empty note.</string>
    <string name="mv_empty">No note is saved in this category.\nAdd a new note right now!</string>
    <string name="mv_popup_share">Share</string>
    <string name="mv_popup_close">Close</string>
    <string name="mv_popup_menu_delete">Delete</string>
    <string name="mv_popup_menu_delete_fail">Failed to delete note!</string>
    <string name="mv_popup_menu_copy">Copy</string>
    <string name="mv_popup_menu_copy_success">Note copied!</string>
    <string name="mv_popup_menu_edit">Edit</string>
    <string name="mv_popup_menu_edit_save">Save</string>
    <string name="mv_popup_menu_edit_close">Close</string>
    <string name="mv_popup_menu_edit_fail">Failed to edit note!</string>
    <string name="mv_popup_menu_edit_fail_empty">Failed to edit note!\nYou can\'t save an empty note.</string>
    <string name="mv_popup_menu_edit_fail_title_too_long">Failed to edit note!\nTitle should be under 20 letters.</string>
    <string name="mv_popup_menu_set_title">Set title</string>
    <string name="mv_popup_menu_set_title_save">Save</string>
    <string name="mv_popup_menu_set_title_close">Close</string>
    <string name="mv_popup_menu_set_title_fail">Failed to set title!</string>
    <string name="mv_popup_menu_set_title_fail_too_long">Failed to set title!\nTitle should be under 20 letters.</string>
    <string name="mv_popup_menu_move_category">Move category</string>
    <string name="mv_popup_menu_move_category_success">Successfully moved category to %s.</string>
    <string name="mv_popup_menu_move_category_fail">Failed to move category!</string>
    <string name="mv_popup_menu_pin">Pin in notification center</string>
    <string name="mv_popup_menu_pin_title">Pinned note</string>
    <string name="mv_share_category">Share category</string>
    <string name="mv_share_category_nothing_to_share">There is no note to share in this category.</string>

    <string name="save_from">Save note</string>
    <string name="sf_select_category">Select category to save note.</string>
    <string name="sf_save_success">Note saved!</string>
    <string name="sf_wearable">Notes from wear</string>
    <string name="sf_wearable_fail">Failed to save note!</string>
    <string name="sf_wearable_fail_message">Failed to save note from your Android Wear.\nTap here to save manually.</string>

    <string name="settings">Settings</string>
    <string name="st_ctg_general">General</string>
    <string name="st_enter_save">Enter key to save</string>
    <string name="st_enter_save_help_on">Pressing enter key will save your note but multi line note can\'t be added.</string>
    <string name="st_enter_save_help_off">You should touch \'Add\' button to save your note but multi line note can be added.</string>
    <string name="st_use_checklist">Checklist</string>
    <string name="st_use_checklist_help_on">Checkbox for each note will shown in the left of the note.</string>
    <string name="st_use_checklist_help_off">Checkbox for each note will not shown, but checked note list will remain.</string>

    <string name="new_note">New note</string>
    <string name="new_note_category_not_defined">Saving category not defined!</string>
    <string name="new_note_title">Note title</string>
    <string name="new_note_content">Note content</string>
    <string name="new_note_save">Save</string>
    <string name="new_note_cancel">Cancel</string>
    <string name="new_note_cancel_message">Are you sure you want to discard note?</string>
    <string name="new_note_cancel_yes">Yes</string>
    <string name="new_note_cancel_no">No</string>
    <string name="new_note_saved">Note has successfully saved.</string>
    <string name="new_note_save_fail_title_too_long">Failed to save note!\nTitle should be under 20 letters.</string>
    <string name="new_note_edited">Note has successfully edited.</string>

</resources>
