<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.digutsoft.note.DMCategoryManager">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/etCategoryName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:hint="@string/cm_add_hint"
            android:imeOptions="actionDone"
            android:singleLine="true">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btCreateCategory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/cm_create" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvCategoryEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:hint="@string/cm_empty" />

    <ListView
        android:id="@+id/lvCategoryList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
